--- a/24pms/views/partial/sidebar.ejs
+++ b/24pms/views/partial/sidebar.ejs
@@ -1,4 +1,4 @@
-<nav class="col-md-2 bg-light" style="padding-top: 15px">
+<nav class="col-md-2 bg-light" style="padding-top: 15px;">
     <ul class="nav flex-column">
         <li class="nav-item">
             <a class="nav-link <%= sidebar=='overview' ? 'selectedSidebar' : ''%>"
