--- a/24pms/views/projects/activity/view.ejs
+++ b/24pms/views/projects/activity/view.ejs
@@ -7,17 +7,24 @@
                         class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                         <h1 class="h2">Activity</h1>
                     </div>
-                    <div class="border rounded p-3" style="max-width: 1200px; margin-bottom: 30px;">
-                        <div>Activity</div>
-                        <div>From <%= pastWeek %> to <%= today %></div>
-                            <%for (const key in groupActivity) {%>
-                                <%= key %>
-                            <ul>
-                                <% groupActivity[key].forEach(element => { %>
-                                    <li><%= element.title %>: <%= element.description %>, Author: <%= element.firstname %></li>
-                                    <% }); %>
+                    <div class="kotak-content-overview" style="max-width: 1200px; ">
+                        <div><strong>Activity</strong></div>
+                        <div>From <%= pastWeek %> to <%= today %>
+                        </div><br>
+                        <%for (const key in groupActivity) {%>
+                            <%= key==daytoday ? 'Today' :key %>
+                                <ul>
+                                    <% groupActivity[key].forEach(element=> { %>
+                                        <li>
+                                            <%= element.hour %> <a
+                                                    href='/projects/issues/<%= projectid %>/edit/<%= element.issueid %>' style="text-decoration: none;">#<%= element.issueid %></a>
+                                                <%= element.title %>: <%= element.description %>, Author: <%=
+                                                            element.firstname %>
+                                        </li>
+                                        <% }); %>
+                                </ul>
                                 <% } %>
-                            </ul>
+
                     </div>
                 </main>
         </div>
