--- a/24pms/views/partial/header.ejs
+++ b/24pms/views/partial/header.ejs
@@ -31,7 +31,7 @@
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="navbar-collapse collapse " id="navbarCollapse" style="">
+            <div class="navbar-collapse collapse " id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="/projects"><i class="fas fa-tasks"></i>
