--- a/24pms/views/partial/header.ejs
+++ b/24pms/views/partial/header.ejs
@@ -5,7 +5,7 @@
     <title>
         <%= title %>
     </title>
-    
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -20,38 +20,45 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    </head>
+</head>
 
 <body>
     <header>
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark mb-4">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Project Management System</a>
-            <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
-                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="navbar-collapse collapse " id="navbarCollapse">
-                <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/projects"><i class="fas fa-tasks"></i>
-                            Projects</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/profile"><i class="fas fa-id-card"></i> Profile</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/users"><i class="fas fa-users"></i> Users</a>
-                    </li>
-                </ul>
-                <form class="form-inline my-2 my-lg-0">
-                    <a class="btn btn-outline-success my-2 my-sm-0" href="/logout"><i class="fas fa-sign-out-alt"></i>
-                        Logout</a>
-                        
-                </form>
-            </div>
-        </div>
-    </nav>
-</header>
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark mb-4">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Project Management System</a>
+                <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse collapse " id="navbarCollapse">
+                    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                        <li class="nav-item">
+                            <a class="nav-link <%=base=='/projects'?'active':''%>" aria-current="page"
+                                href="/projects"><i class="fas fa-tasks"></i>
+                                Projects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link <%=base=='/profile'?'active':''%>" href="/profile"><i
+                                    class="fas fa-id-card"></i> Profile</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link <%=base=='/users' ?'active':''%>" href="/users" <%=role=='User'?'hidden':''%>><i
+                                    class="fas fa-users"></i> Users</a>
+                        </li>
+                    </ul>
+                    <form class="form-inline my-2 my-lg-0">
+                        <a class="btn btn-outline-success my-2 my-sm-0" href="/logout"><i
+                                class="fas fa-sign-out-alt"></i>
+                            Logout</a>
 
-<script src="/javascripts/bootstrap.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+                    </form>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <script src="/javascripts/bootstrap.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
