--- a/24pms/views/profile/form.ejs
+++ b/24pms/views/profile/form.ejs
@@ -8,7 +8,7 @@
                 <div class="row mb-3">
                     <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
                     <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputEmail3" name="email" value="<%=email%>" disabled>
+                        <input type="email" class="form-control" id="inputEmail3" name="email" value="<%=user.email%>" disabled>
                     </div>
                 </div>
                 <div class="row mb-3">
@@ -22,21 +22,21 @@
                     <div class="col-sm-10">
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="position" id="gridRadios1"
-                                value="Manager" <%=position=='Manager' ? "checked" :"" %>>
+                                value="Manager" <%=user.position=='Manager' ? "checked" :"" %>>
                             <label class="form-check-label" for="gridRadios1">
                                 Manager
                             </label>
                         </div>
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="position" id="gridRadios2"
-                                value="Software Developer" <%=position=='Software Developer' ? "checked" :"" %>>
+                                value="Software Developer" <%=user.position=='Software Developer' ? "checked" :"" %>>
                             <label class="form-check-label" for="gridRadios2">
                                 Software Developer
                             </label>
                         </div>
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="position" id="gridRadios3"
-                                value="Quality Assurance" <%=position=='Quality Assurance' ? "checked" :"" %>>
+                                value="Quality Assurance" <%=user.position=='Quality Assurance' ? "checked" :"" %>>
                             <label class="form-check-label" for="gridRadios3">
                                 Quality Assurance
                             </label>
@@ -47,7 +47,7 @@
                     <legend class="col-form-label col-sm-2 pt-0">Type</legend>
                     <div class="col-sm-10">
                         <div class="form-check">
-                            <input class="form-check-input" type="checkbox" id="gridCheck1" name="fulltime" <%=fulltime==true ? "checked" :"" %>>
+                            <input class="form-check-input" type="checkbox" id="gridCheck1" name="isfulltime" <%=user.isfulltime==true ? "checked" :"" %>>
                             <label class="form-check-label" for="gridCheck1">
                                 Fulltime
                             </label>
