--- a/24pms/views/projects/list.ejs
+++ b/24pms/views/projects/list.ejs
@@ -59,17 +59,17 @@
             <button type="submit" class="btn btn-primary"><i class="fas fa-save"></i> Apply</button>
         </form>
         <br>
-        <table class="table table-hover">
+        <table class="table table-striped table-hover">
             <thead>
                 <tr>
                     <% if(setting.idOption=='on' ){ %>
-                        <th># <a href="<%= String(url.split('?')[1]).includes('asc') || String(url.split('?')[1]).includes('desc') ? '?' : url.split('=')[0]=='?idFilter' && (String(url.split('&')[url.split('&').length-2]).includes('desc') || String(url.split('&')[url.split('&').length-2]).includes('asc')) ? urls:url%>id_asc"><i class="fas fa-long-arrow-alt-up"></i></a><a href="<%= String(url.split('?')[1]).includes('asc') || String(url.split('?')[1]).includes('desc') ? '?' : url.split('=')[0]=='?idFilter' && (String(url.split('&')[url.split('&').length-2]).includes('desc') || String(url.split('&')[url.split('&').length-2]).includes('asc')) ? urls:url%>id_desc"><i class="fas fa-long-arrow-alt-down"></i></a></th>
+                        <th># <a href="<%= String(url.split('?')[1]).includes('asc') || String(url.split('?')[1]).includes('desc') ? '?' : url.split('=')[0]=='?idFilter' && (String(url.split('&')[url.split('&').length-2]).includes('desc') || String(url.split('&')[url.split('&').length-2]).includes('asc')) ? urls:url%>id_asc"><i class="fas fa-long-arrow-alt-up" style=<%=sorting=='id_asc' ? 'color:#DC3545':''%>></i></a><a href="<%= String(url.split('?')[1]).includes('asc') || String(url.split('?')[1]).includes('desc') ? '?' : url.split('=')[0]=='?idFilter' && (String(url.split('&')[url.split('&').length-2]).includes('desc') || String(url.split('&')[url.split('&').length-2]).includes('asc')) ? urls:url%>id_desc"><i class="fas fa-long-arrow-alt-down" style=<%=sorting=='id_desc' ? 'color:#DC3545':''%>></i></a></th>
                         <% } %>
                             <% if(setting.nameOption=='on' ){ %>
-                                <th>Name <a href="<%= String(url.split('?')[1]).includes('asc') || String(url.split('?')[1]).includes('desc') ? '?' : url.split('=')[0]=='?idFilter' && (String(url.split('&')[url.split('&').length-2]).includes('desc') || String(url.split('&')[url.split('&').length-2]).includes('asc')) ? urls:url%>name_asc"><i class="fas fa-long-arrow-alt-up"></i></a><a href="<%= String(url.split('?')[1]).includes('asc') || String(url.split('?')[1]).includes('desc') ? '?' : url.split('=')[0]=='?idFilter' && (String(url.split('&')[url.split('&').length-2]).includes('desc') || String(url.split('&')[url.split('&').length-2]).includes('asc')) ? urls:url%>name_desc"><i class="fas fa-long-arrow-alt-down"></i></a></th>
+                                <th>Name <a href="<%= String(url.split('?')[1]).includes('asc') || String(url.split('?')[1]).includes('desc') ? '?' : url.split('=')[0]=='?idFilter' && (String(url.split('&')[url.split('&').length-2]).includes('desc') || String(url.split('&')[url.split('&').length-2]).includes('asc')) ? urls:url%>name_asc"><i class="fas fa-long-arrow-alt-up" style=<%=sorting=='name_asc' ? 'color:#DC3545':''%>></i></a><a href="<%= String(url.split('?')[1]).includes('asc') || String(url.split('?')[1]).includes('desc') ? '?' : url.split('=')[0]=='?idFilter' && (String(url.split('&')[url.split('&').length-2]).includes('desc') || String(url.split('&')[url.split('&').length-2]).includes('asc')) ? urls:url%>name_desc"><i class="fas fa-long-arrow-alt-down" style=<%=sorting=='name_desc' ? 'color:#DC3545':''%>></i></a></th>
                                 <% } %>
                                     <% if(setting.memberOption=='on' ){ %>
-                                        <th>Members <a href="<%= String(url.split('?')[1]).includes('asc') || String(url.split('?')[1]).includes('desc') ? '?' : url.split('=')[0]=='?idFilter' && (String(url.split('&')[url.split('&').length-2]).includes('desc') || String(url.split('&')[url.split('&').length-2]).includes('asc')) ? urls:url%>members_asc"><i class="fas fa-long-arrow-alt-up"></i></a><a href="<%= String(url.split('?')[1]).includes('asc') || String(url.split('?')[1]).includes('desc') ? '?' : url.split('=')[0]=='?idFilter' && (String(url.split('&')[url.split('&').length-2]).includes('desc') || String(url.split('&')[url.split('&').length-2]).includes('asc')) ? urls:url%>members_desc"><i class="fas fa-long-arrow-alt-down"></i></a></th>
+                                        <th>Members <a href="<%= String(url.split('?')[1]).includes('asc') || String(url.split('?')[1]).includes('desc') ? '?' : url.split('=')[0]=='?idFilter' && (String(url.split('&')[url.split('&').length-2]).includes('desc') || String(url.split('&')[url.split('&').length-2]).includes('asc')) ? urls:url%>members_asc"><i class="fas fa-long-arrow-alt-up" style=<%=sorting=='members_asc' ? 'color:#DC3545':''%>></i></a><a href="<%= String(url.split('?')[1]).includes('asc') || String(url.split('?')[1]).includes('desc') ? '?' : url.split('=')[0]=='?idFilter' && (String(url.split('&')[url.split('&').length-2]).includes('desc') || String(url.split('&')[url.split('&').length-2]).includes('asc')) ? urls:url%>members_desc"><i class="fas fa-long-arrow-alt-down" style=<%=sorting=='members_desc' ? 'color:#DC3545':''%>></i></a></th>
                                         <% } %>
                                             <th>Actions</th>
                 </tr>
@@ -97,30 +97,10 @@
                                                         <a class="btn btn-success"
                                                             href="/projects/edit/<%= item.projectid %>"><i
                                                                 class="fas fa-edit"></i> Edit</a>
-                                                        <button type="button" class="btn btn-danger" data-toggle="modal"
-                                                            data-target="#exampleModal"><i class="fas fa-trash"></i>
+                                                        <button type="button" class="btn btn-danger deleteButton" data-toggle="modal" deleteid="<%= item.projectid %>"
+                                                            data-target="#exampleModal" <%=role=='User'?'hidden':''%>><i class="fas fa-trash"></i>
                                                             Delete</button>
-                                                        <div class="modal fade" id="exampleModal" tabindex="-1"
-                                                            role="dialog" aria-labelledby="exampleModalLabel"
-                                                            aria-hidden="true">
-                                                            <div class="modal-dialog" role="document">
-                                                                <div class="modal-content">
-                                                                    <div class="modal-header">
-                                                                        <h5 class="modal-title" id="exampleModalLabel">
-                                                                            Delete Confirmation</h5>
-                                                                    </div>
-                                                                    <div class="modal-body">
-                                                                        Are you sure want to delete this project?
-                                                                    </div>
-                                                                    <div class="modal-footer">
-                                                                        <button type="button" class="btn btn-secondary"
-                                                                            data-dismiss="modal">No</button>
-                                                                        <a type="button" class="btn btn-primary"
-                                                                            href="/projects/delete/<%= item.projectid %>">Yes</a>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
+                                                        
                                                     </td>
                                                     <% } %>
                     </tr>
@@ -141,4 +121,28 @@
         <a class="btn btn-primary" href="/projects/add"><i class="fas fa-plus-circle"></i> Add</a>
     </div>
     <br>
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">
+                    Delete Confirmation</h5>
+                </div>
+                <div class="modal-body">
+                    Are you sure want to delete this project?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+                    <a type="button" class="btn btn-primary" id="deleteproject">Yes</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script>
+        $(".deleteButton").click(function () {
+        let deleteId = $(this).attr('deleteid')
+        $("#deleteproject").attr("href", `/projects/delete/${deleteId}`);
+    });
+    </script>
     <% include ../partial/footer.ejs %>
