--- a/24pms/views/projects/members/list.ejs
+++ b/24pms/views/projects/members/list.ejs
@@ -73,17 +73,17 @@
                         <button type="submit" class="btn btn-primary"><i class="fas fa-save"></i> Apply</button>
                     </form>
                     <br>
-                    <table class="table table-hover">
+                    <table class="table table-striped table-hover">
                         <thead>
                             <tr>
                                 <% if(setting.idOption=='on' ){ %>
-                                    <th># <a href="<%=projectid%><%= String(url.split('?')[1]).includes('asc') || String(url.split('?')[1]).includes('desc') ? '?' : url.split('=')[0]=='?idFilter' && (String(url.split('&')[url.split('&').length-2]).includes('desc') || String(url.split('&')[url.split('&').length-2]).includes('asc')) ? urls:url%>id_asc"><i class="fas fa-long-arrow-alt-up"></i></a><a href="<%=projectid%><%= String(url.split('?')[1]).includes('asc') || String(url.split('?')[1]).includes('desc') ? '?' : url.split('=')[0]=='?idFilter' && (String(url.split('&')[url.split('&').length-2]).includes('desc') || String(url.split('&')[url.split('&').length-2]).includes('asc')) ? urls:url%>id_desc"><i class="fas fa-long-arrow-alt-down"></i></a></th>
+                                    <th># <a href="<%=projectid%><%= String(url.split('?')[1]).includes('asc') || String(url.split('?')[1]).includes('desc') ? '?' : url.split('=')[0]=='?idFilter' && (String(url.split('&')[url.split('&').length-2]).includes('desc') || String(url.split('&')[url.split('&').length-2]).includes('asc')) ? urls:url%>id_asc"><i class="fas fa-long-arrow-alt-up" style=<%=sorting=='id_asc' ? 'color:#DC3545':''%>></i></a><a href="<%=projectid%><%= String(url.split('?')[1]).includes('asc') || String(url.split('?')[1]).includes('desc') ? '?' : url.split('=')[0]=='?idFilter' && (String(url.split('&')[url.split('&').length-2]).includes('desc') || String(url.split('&')[url.split('&').length-2]).includes('asc')) ? urls:url%>id_desc"><i class="fas fa-long-arrow-alt-down" style=<%=sorting=='id_desc' ? 'color:#DC3545':''%>></i></a></th>
                                     <% } %>
                                         <% if(setting.nameOption=='on' ){ %>
-                                            <th>Name <a href="<%=projectid%><%= String(url.split('?')[1]).includes('asc') || String(url.split('?')[1]).includes('desc') ? '?' : url.split('=')[0]=='?idFilter' && (String(url.split('&')[url.split('&').length-2]).includes('desc') || String(url.split('&')[url.split('&').length-2]).includes('asc')) ? urls:url%>name_asc"><i class="fas fa-long-arrow-alt-up"></i></a><a href="<%=projectid%><%= String(url.split('?')[1]).includes('asc') || String(url.split('?')[1]).includes('desc') ? '?' : url.split('=')[0]=='?idFilter' && (String(url.split('&')[url.split('&').length-2]).includes('desc') || String(url.split('&')[url.split('&').length-2]).includes('asc')) ? urls:url%>name_desc"><i class="fas fa-long-arrow-alt-down"></i></a></th>
+                                            <th>Name <a href="<%=projectid%><%= String(url.split('?')[1]).includes('asc') || String(url.split('?')[1]).includes('desc') ? '?' : url.split('=')[0]=='?idFilter' && (String(url.split('&')[url.split('&').length-2]).includes('desc') || String(url.split('&')[url.split('&').length-2]).includes('asc')) ? urls:url%>name_asc"><i class="fas fa-long-arrow-alt-up" style=<%=sorting=='name_asc' ? 'color:#DC3545':''%>></i></a><a href="<%=projectid%><%= String(url.split('?')[1]).includes('asc') || String(url.split('?')[1]).includes('desc') ? '?' : url.split('=')[0]=='?idFilter' && (String(url.split('&')[url.split('&').length-2]).includes('desc') || String(url.split('&')[url.split('&').length-2]).includes('asc')) ? urls:url%>name_desc"><i class="fas fa-long-arrow-alt-down" style=<%=sorting=='name_desc' ? 'color:#DC3545':''%>></i></a></th>
                                             <% } %>
                                                 <% if(setting.positionOption=='on' ){ %>
-                                                    <th>Position <a href="<%=projectid%><%= String(url.split('?')[1]).includes('asc') || String(url.split('?')[1]).includes('desc') ? '?' : url.split('=')[0]=='?idFilter' && (String(url.split('&')[url.split('&').length-2]).includes('desc') || String(url.split('&')[url.split('&').length-2]).includes('asc')) ? urls:url%>position_asc"><i class="fas fa-long-arrow-alt-up"></i></a><a href="<%=projectid%><%= String(url.split('?')[1]).includes('asc') || String(url.split('?')[1]).includes('desc') ? '?' : url.split('=')[0]=='?idFilter' && (String(url.split('&')[url.split('&').length-2]).includes('desc') || String(url.split('&')[url.split('&').length-2]).includes('asc')) ? urls:url%>position_desc"><i class="fas fa-long-arrow-alt-down"></i></a></th>
+                                                    <th>Position <a href="<%=projectid%><%= String(url.split('?')[1]).includes('asc') || String(url.split('?')[1]).includes('desc') ? '?' : url.split('=')[0]=='?idFilter' && (String(url.split('&')[url.split('&').length-2]).includes('desc') || String(url.split('&')[url.split('&').length-2]).includes('asc')) ? urls:url%>position_asc"><i class="fas fa-long-arrow-alt-up" style=<%=sorting=='position_asc' ? 'color:#DC3545':''%>></i></a><a href="<%=projectid%><%= String(url.split('?')[1]).includes('asc') || String(url.split('?')[1]).includes('desc') ? '?' : url.split('=')[0]=='?idFilter' && (String(url.split('&')[url.split('&').length-2]).includes('desc') || String(url.split('&')[url.split('&').length-2]).includes('asc')) ? urls:url%>position_desc"><i class="fas fa-long-arrow-alt-down" style=<%=sorting=='position_desc' ? 'color:#DC3545':''%>></i></a></th>
                                                     <% } %>
                                                         <th>Actions</th>
                             </tr>
@@ -109,41 +109,10 @@
                                                                     <a class="btn btn-success"
                                                                         href="/projects/members/<%= projectid %>/edit/<%= item.id %>"><i
                                                                             class="fas fa-edit"></i> Edit</a>
-                                                                    <button type="button" class="btn btn-danger"
-                                                                        data-toggle="modal"
-                                                                        data-target="#exampleModal"><i
-                                                                            class="fas fa-trash" onclick=""></i>
-                                                                        Delete</button>
-
-                                                                    <div class="modal fade" id="exampleModal" tabindex="-1"
-                                                                        role="dialog" aria-labelledby="exampleModalLabel"
-                                                                        aria-hidden="true">
-                                                                        <div class="modal-dialog" role="document">
-                                                                            <div class="modal-content">
-                                                                                <div class="modal-header">
-                                                                                    <h5 class="modal-title"
-                                                                                        id="exampleModalLabel">
-                                                                                        Delete Confirmation</h5>
-                                                                                        <button type="button" class="close"
-                                                                                            data-dismiss="modal" aria-label="Close">
-                                                                                            <span aria-hidden="true">&times;</span>
-                                                                                        </button>
-                                                                                </div>
-                                                                                <div class="modal-body">
-                                                                                    Are you sure want to delete this
-                                                                                    member?
-                                                                                </div>
-                                                                                <div class="modal-footer">
-                                                                                    <button type="button"
-                                                                                        class="btn btn-secondary"
-                                                                                       data-dismiss="modal">No</button>
-                                                                                    <a type="button"
-                                                                                        class="btn btn-primary"
-                                                                                        href="/projects/members/<%= projectid %>/delete/<%= item.id %>">Yes</a>
-                                                                                </div> 
-                                                                            </div>
-                                                                        </div>
-                                                                    </div>
+                                                                    <a type="button" class="btn btn-danger"
+                                                                        href="/projects/members/<%= projectid %>/delete/<%= item.id %>"><i
+                                                                            class="fas fa-trash"></i>
+                                                                        Delete</a>
                                                                 </td>
                                                                 <% } %>
                                 </tr>
