--- a/24pms/views/projects/issues/formEdit.ejs
+++ b/24pms/views/projects/issues/formEdit.ejs
@@ -45,7 +45,7 @@
                                     </div>
                                     <div class="form-check">
                                         <input class="form-check-input" type="radio" name="tracker" id="Support"
-                                            value="Support" <%=issue.tracker=="Feature" ? "checked" :""%>>
+                                            value="Support" <%=issue.tracker=="Support" ? "checked" :""%>>
                                         <label class="form-check-label" for="Support">
                                             Support
                                         </label>
