--- a/29.5 Instagram Lite/views/profile.ejs
+++ b/29.5 Instagram Lite/views/profile.ejs
@@ -1,46 +1,51 @@
-<!DOCTYPE html>
-<html>
+<% include partial/header.ejs %>
 
-<head>
-  <title>
-    <%= title %>
-  </title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
-  <link rel='stylesheet' href='/stylesheets/style.css' />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
-</head>
-
-<body>
-  <nav class="navbar navbar-expand-lg bg-primary navbar-dark fixed-top">
+  <section class="p-4 border">
     <div class="container">
-      <a href="#" class="navbar-brand">Picturico</a>
-      <form class="navbar-nav ms-auto" id="search">
-        <input type="text" class="form-control" placeholder="Search">
-      </form>
-      <div class="navbar-nav ms-auto">
-        <div>
-          <a href="#" class="fs-4 header-right"><i class="bi bi-house-door link-light"></i></a>
-          <a href="#" class="fs-4 header-right"><i class="bi bi-heart link-light"></i></a>
-          <a href="#" class="fs-4 header-right"><i class="bi bi-person link-light"></i></a>
+      <div id="profilePage" class="row align-items-center">
+        <div class="col-md-4 mb-3">
+          <img src=<%=profile[0].dataValues.profilepic.location%> class="rounded-circle profilepic" width="150px" height="150px">
         </div>
-      </div>
-    </div>
-  </nav>
-
-  <section class="p-5 border">
-    <div class="container">
-      <div class="row align-items-center justify-content-between">
-        <div class="col-md">
-          <img src="https://randomuser.me/api/portraits/men/11.jpg" class="rounded-circle" width="150px" height="150px">
-        </div>
-        <div class="col-md">
-          <h3>
-            Username <a class="btn-sm btn-primary" href="#">Follow</a>
-          </h3>
+        <div class="col-md-8">
+          <div class="row align-items-center mb-3">
+            <div class="col-md-3">
+              <h2>
+                <%= username %>
+              </h2>
+            </div>
+            <div class="col-md-4">
+              <% if(username==usernameLogged){ %>
+                <a class="btn-sm btn-dark" href="#" id="editProfile" data-bs-toggle="modal"
+                  data-bs-target="#ediProfileModal">Edit Profile</a>
+                <% } else {%>
+                  <a class="btn-sm btn-primary followButton" href="#">Follow</a>
+                  <% } %>
+            </div>
+          </div>
+          <div class="mb-3">
+            <div id="profileCounter" class="row">
+              <div class="col-md-3">
+                <%=posts.length%> <%=posts.length>1 ? 'posts':'post'%>
+              </div>
+              <div class="col-3">
+                0 followers
+              </div>
+              <div class="col-3">
+                0 following
+              </div>
+            </div>
+          </div>
+          <%if(profile[0]){%>
+          <div>
+            <strong><%=profile[0].dataValues.name%></strong>
+          </div>
+          <div>
+            <%=profile[0].dataValues.bio%>
+          </div>
+          <div>
+            <a href="https://<%=profile[0].dataValues.website%>"><%=profile[0].dataValues.website%></a>
+          </div>
+          <%}%>
         </div>
       </div>
     </div>
@@ -48,45 +53,54 @@
 
   <section>
     <div class="container">
-      <div class="row text-center mt-5">
-        <div class="col-4 mb-3 ">
-          <img src="images/1.jpeg" alt="..." width="300px" height="300px" data-bs-toggle="modal"
-            data-bs-target="#exampleModal">
-        </div>
-        <div class="col-4 mb-3 ">
-          <img src="images/2.jpg" alt="..." width="300px" height="300px">
-        </div>
-        <div class="col-4 mb-3 ">
-          <img src="images/3.jpeg" alt="..." width="300px" height="300px">
-        </div>
-        <div class="col-4 mb-3 ">
-          <img src="images/4.jpg" alt="..." width="300px" height="300px">
-        </div>
-        <div class="col-4 mb-3 ">
-          <img src="images/5.jpeg" alt="..." width="300px" height="300px">
-        </div>
-        <div class="col-4 mb-3 ">
-          <img src="images/6.jpg" alt="..." width="300px" height="300px">
-        </div>
+      <div class="row mt-5">
+        <% posts.forEach(item=>{%>
+          <div class="col-4 mb-3">
+            <a href="/posts/<%= item.dataValues.id %>"><img class='profileThumbnail' src="<%= item.dataValues.file[0].location %>" alt="..." width="300px"
+              height="300px"></a>
+          </div>
+          <% }); %>
       </div>
     </div>
   </section>
-
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-xl modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Title</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+  
+<!-- Modal Edit Profile -->
+<div class="modal fade" id="ediProfileModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+aria-labelledby="ediProfileModalLabel" aria-hidden="true">
+<div class="modal-dialog ">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h5 class="modal-title" id="ediProfileModalLabel">Edit Profile</h5>
+      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    </div>
+    <form id="form-add-issue" action="/profile/<%=usernameLogged%>" method="POST" encType="multipart/form-data">
+      <div class="modal-body">
+        <label for="ediitProfilePic" class="form-label">Profile Photo</label>
+        <div class="mb-3 file-input">
+          <input type="file" data-id="0" id="ediitProfilePic" name="files0" class="form-control file-preview" />
+          <button id="delete-file-input" type="button" class="btn btn-outline-danger mt-2" hidden="">Remove
+            Photo</button>
         </div>
-        <div class="modal-body">
-          <img src="images/1.jpeg" alt="..." width="400px" height="400px">
+        <div class="mb-3">
+          <label for="editName" class="form-label">Name</label>
+          <input type="text" class="form-control" id="editName" name="editName">
+        </div>
+        <div class="mb-3">
+          <label for="editBio" class="form-label">Bio</label>
+          <textarea type="text" class="form-control" id="editBio" name="editBio"></textarea>
+        </div>
+        <div class="mb-3">
+          <label for="editWebsite" class="form-label">Website</label>
+          <input type="text" class="form-control" id="editWebsite" name="editWebsite">
         </div>
       </div>
-    </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        <button type="submit" class="btn btn-primary">Save Profile</button>
+      </div>
+    </form>
   </div>
-
-</body>
-
-</html>
+</div>
+</div>
+  <% include partial/modal.ejs %>
+  <% include partial/footer.ejs %>
